@@ -1,3 +1,8 @@
+2002-01-04  James Henstridge  <james@daa.com.au>
+
+	* jhbuild.py (setup_env): get rid of libgdkxft.so from LD_PRELOAD
+	if it is in there.  Can fix some build errors for people.
+
 2002-01-03  Alex Graveley  <alex@ximian.com>
 
 	* moduleinfo.py (head): libzvt depends on gnome-common for
